# poc-tool-ollama-2b

./: .env.example  .gitignore  README.md  pyproject.toml
src/tool/: chat_store.py  cli.py  context.py  ollama_client.py  output.py
src/tool/commands/: chat.py  review.py
src/tool/prompts/: chat.md  review.md
